Add functionality to build benchmark binary with GraalVM.
Produces more predictable runtime results without JIT, but yet also fast runtime results due to the AOT compilation to native code.